--- a/views/include/shop/bussiness/index.ejs
+++ b/views/include/shop/bussiness/index.ejs
@@ -51,6 +51,7 @@
 </template>
 <template id="unacceptBtnsTemplate">
     <div name="action" class="row mt-3 mb-3 mr-3 justify-content-end align-items-center">
+        <input type="text" class="form-control col-md-8 col-6 mr-3" placeholder="留言" name="comments">
         <button class="btn btn-danger mr-3" onclick="changeListen(complete,this)">拒絕</button>
         <button class="btn btn-success" onclick="changeListen(accept,this)">接受</button>
     </div>
@@ -122,8 +123,9 @@
 
         const loadingTemplate = document.getElementById('loadingTemplate');
         const loading = document.importNode(loadingTemplate.content, true);
+        const comments = element.parentNode.querySelector('[name="comments"]').value;
         element.prepend(loading);
-        const result = await fun(element.parentNode.parentNode.id);
+        const result = await fun(element.parentNode.parentNode.id, comments);
         if (result.code) lastLength = await orderListGenerate();
     }
 
