--- a/views/include/shop/bussiness/index.ejs
+++ b/views/include/shop/bussiness/index.ejs
@@ -51,7 +51,7 @@
 </template>
 <template id="unacceptBtnsTemplate">
     <div name="action" class="row mt-3 mb-3 mr-3 justify-content-end align-items-center">
-        <input type="text" class="form-control col-md-8 col-6 mr-3" placeholder="留言" name="comments">
+        <input type="text" class="form-control col-md-7 col-6 mr-3" placeholder="留言" name="comments">
         <button class="btn btn-danger mr-3" onclick="changeListen(complete,this)">拒絕</button>
         <button class="btn btn-success" onclick="changeListen(accept,this)">接受</button>
     </div>
@@ -123,9 +123,13 @@
 
         const loadingTemplate = document.getElementById('loadingTemplate');
         const loading = document.importNode(loadingTemplate.content, true);
-        const comments = element.parentNode.querySelector('[name="comments"]').value;
+        const comments = element.parentNode.querySelector('[name="comments"]');
         element.prepend(loading);
-        const result = await fun(element.parentNode.parentNode.id, comments);
+        const data = {
+            _id: element.parentNode.parentNode.id,
+            comments: comments ? comments.value : null
+        };
+        const result = await fun(data);
         if (result.code) lastLength = await orderListGenerate();
     }
 
@@ -192,6 +196,4 @@
         }
         return order.length;
     }
-</script>
-<script>
 </script>
